--- a/src/scss/sections/_outro.scss
+++ b/src/scss/sections/_outro.scss
@@ -17,7 +17,7 @@
     left: 5%;
   }
 
-  & .section-header-secondary-title {
+  & .section-header-subtitle {
     font-size: 3rem;
   }
 
@@ -32,7 +32,7 @@
     margin-bottom: 1.8rem;
   }
 
-  & .article-video {
+  & .intro-video {
     position: fixed;
     top: 50%;
     left: 50%;
