--- a/src/scss/sections/_outro.scss
+++ b/src/scss/sections/_outro.scss
@@ -26,23 +26,8 @@
   }
 
   & .section-header-sub-title {
-    font-family: $font-family-work-sans-thin;
-    font-size: 4.5rem;
-    line-height: 1.2;
+    @include text-thin-title();
     margin-bottom: 1.8rem;
   }
 
-  & .intro-video {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-    transform: translateY(-50%) translateX(-50%);
-    //background: url('/img/intro.jpg') no-repeat;
-    background-size: cover;
-  }
 }
