--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4912,8 +4912,10 @@ body {
   font-size: 1.6rem;
   letter-spacing: -0.1rem;
   font-family: "worksans-regular", sans-serif;
-  text-decoration: underline; }
+  text-decoration: underline;
+  outline: none; }
   .footer__nav__button:hover, .footer__nav__button:focus, .footer__nav__button:active {
+    outline: none;
     color: #8c8c8c;
     text-decoration: underline; }
 
@@ -4925,8 +4927,10 @@ body {
   font-size: 1.6rem;
   letter-spacing: -0.1rem;
   font-family: "worksans-regular", sans-serif;
-  text-decoration: underline; }
+  text-decoration: underline;
+  outline: none; }
   .article-header__nav__button:hover, .article-header__nav__button:focus, .article-header__nav__button:active {
+    outline: none;
     color: #8c8c8c;
     text-decoration: underline; }
 
@@ -4977,8 +4981,10 @@ body {
   font-size: 1.6rem;
   letter-spacing: -0.1rem;
   font-family: "worksans-regular", sans-serif;
-  text-decoration: underline; }
+  text-decoration: underline;
+  outline: none; }
   .side-bar__nav__button--portfolio:hover, .side-bar__nav__button--skills:hover, .side-bar__nav__button--experience:hover, .side-bar__nav__button--contact:hover, .side-bar__nav__button--resume:hover, .side-bar__nav__button--code:hover, .side-bar__nav__button--portfolio:focus, .side-bar__nav__button--skills:focus, .side-bar__nav__button--experience:focus, .side-bar__nav__button--contact:focus, .side-bar__nav__button--resume:focus, .side-bar__nav__button--code:focus, .side-bar__nav__button--portfolio:active, .side-bar__nav__button--skills:active, .side-bar__nav__button--experience:active, .side-bar__nav__button--contact:active, .side-bar__nav__button--resume:active, .side-bar__nav__button--code:active {
+    outline: none;
     color: #8c8c8c;
     text-decoration: underline; }
 
@@ -5279,7 +5285,7 @@ body {
     top: 0;
     opacity: 0.6; }
   #skills.cogwheel-rotating .cogwheel {
-    animation: rotating 60s linear infinite; }
+    animation: rotating 90s linear infinite; }
   #skills .skills-list {
     position: absolute;
     width: 100%;
@@ -5291,27 +5297,37 @@ body {
       list-style: none;
       padding: 0; }
   #skills .skills-list-title {
-    margin: 0;
-    font-size: 3rem;
+    font-family: "worksans-regular", sans-serif;
+    font-size: 2.7rem;
     letter-spacing: -0.2rem;
-    margin-bottom: 0.8rem;
-    font-family: "worksans-regular", sans-serif; }
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 0.8rem; }
+  #skills .skills-list-title-small {
+    font-family: "worksans-regular", sans-serif;
+    font-size: 2.2rem;
+    letter-spacing: -0.12rem;
+    line-height: 1.1;
+    margin-top: 0;
+    margin-bottom: 0.8rem; }
   #skills .skills-group-javascript, #skills .skills-group-css, #skills .skills-group-html, #skills .skills-group-tools, #skills .skills-group-coding, #skills .skills-group-uxui, #skills .skills-group-backend {
     position: absolute;
     top: 50%;
     left: 45%;
-    text-align: center;
-    font-size: 1.6rem;
-    line-height: 1.3; }
+    text-align: center; }
   #skills .skills-group-javascript {
     height: 404px;
     width: 404px; }
+    #skills .skills-group-javascript .cogwheel {
+      animation-duration: 30s; }
     #skills .skills-group-javascript .skills-list {
       top: -50%;
       left: -50%; }
   #skills .skills-group-css, #skills .skills-group-html {
     height: 304px;
     width: 304px; }
+    #skills .skills-group-css .cogwheel, #skills .skills-group-html .cogwheel {
+      animation-duration: 60s; }
   #skills .skills-group-css .skills-list {
     top: -50%;
     left: -180%; }
@@ -5323,9 +5339,6 @@ body {
   #skills .skills-group-tools, #skills .skills-group-coding, #skills .skills-group-uxui, #skills .skills-group-backend {
     height: 204px;
     width: 204px; }
-    #skills .skills-group-tools .skills-list-title, #skills .skills-group-coding .skills-list-title, #skills .skills-group-uxui .skills-list-title, #skills .skills-group-backend .skills-list-title {
-      font-size: 2.4rem;
-      margin-bottom: 0.6rem; }
   #skills .skills-group-tools .skills-list {
     top: 60%;
     left: -164%; }
@@ -5371,6 +5384,7 @@ body {
     display: flex;
     margin-bottom: 0; }
   #portfolio .portfolio-item-title-wrapper {
+    display: none;
     text-align: center;
     position: absolute;
     max-width: 241px;
@@ -5381,6 +5395,7 @@ body {
     min-height: 320px;
     padding: 3.7rem 3rem; }
   #portfolio .portfolio-item-title-wrapper-horizontal {
+    display: none;
     text-align: center;
     position: absolute;
     max-width: 320px;
@@ -5439,8 +5454,9 @@ body {
     margin-bottom: 0; }
   #portfolio .project-type-label {
     font-family: "worksans-thin", sans-serif;
-    font-size: 2.4rem;
+    font-size: 1.7rem;
     line-height: 1.2;
+    letter-spacing: 0.03rem;
     position: absolute;
     top: -3.1rem;
     left: 4.2%; }
@@ -5822,7 +5838,6 @@ body {
 
 #experience {
   flex-direction: column;
-  font-size: 1.6rem;
   padding-bottom: 8vh;
   padding-top: 12vh; }
   #experience .section-header-img-wrapper {
@@ -5863,44 +5878,35 @@ body {
     height: 80px;
     border-radius: 50%;
     border: 1px dotted #8c8c8c;
-    text-align: center;
-    padding-top: 2.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "worksans-thin", sans-serif;
     font-size: 2.4rem;
-    font-family: "worksans-thin", sans-serif; }
+    line-height: 1.2; }
   #experience .experience-timeline-year-last {
     position: absolute;
     left: 0;
     bottom: -80px; }
-  #experience .experience-employer-logo-rocket {
-    width: 30%;
-    max-width: 250px; }
-  #experience .experience-employer-logo-tl {
-    width: 30%;
-    max-width: 282px; }
-  #experience .experience-employer-logo-uni {
-    width: 30%;
-    max-width: 250px; }
-  #experience .experience-employer-logo-img {
-    width: 100%;
-    margin-bottom: 0.8rem; }
   #experience .experience-content {
     padding-top: 80px;
     padding-bottom: 20px; }
   #experience .experience-employer-name {
-    font-size: 2.2rem;
-    margin-bottom: 0.5rem;
-    font-family: "worksans-thin", sans-serif; }
+    font-family: "worksans-thin", sans-serif;
+    font-size: 2.4rem;
+    line-height: 1.2;
+    margin-bottom: 0.5rem; }
   #experience .experience-position {
     font-family: "worksans-regular", sans-serif;
     font-size: 2.7rem;
     letter-spacing: -0.2rem;
+    line-height: 1.2;
     margin-bottom: 0.5rem; }
-  #experience .experience-period {
-    font-family: "worksans-thin", sans-serif;
-    font-size: 2.2rem; }
   #experience .experience-subtitle {
     font-family: "worksans-light", sans-serif;
     font-size: 1.6rem;
+    letter-spacing: -0.02rem;
+    line-height: 1.4;
     margin-bottom: 0.5rem;
     margin-top: 2.5rem; }
 
@@ -5920,22 +5926,31 @@ body {
   #references .references-content {
     position: relative; }
   #references .reference-wrapper {
-    width: 28%;
-    font-size: 1.6rem; }
+    width: 28%; }
   #references .references-title {
-    margin-bottom: 6rem;
     font-family: "worksans-regular", sans-serif;
-    font-size: 3rem;
-    letter-spacing: -0.18rem; }
+    font-size: 2.7rem;
+    letter-spacing: -0.2rem;
+    line-height: 1.2;
+    margin-bottom: 6rem; }
   #references .reference-content {
     position: relative;
     font-style: italic; }
   #references .reference-author {
-    margin-bottom: 0;
-    position: relative;
     font-family: "worksans-regular", sans-serif;
-    font-size: 2.1rem;
-    letter-spacing: -0.18rem; }
+    font-size: 2.2rem;
+    letter-spacing: -0.12rem;
+    line-height: 1.1;
+    margin-bottom: 0.6rem;
+    margin-top: 1.2rem;
+    position: relative; }
+  #references .reference-author-title {
+    font-family: "worksans-thin", sans-serif;
+    font-size: 1.7rem;
+    line-height: 1.2;
+    letter-spacing: 0.03rem;
+    margin-bottom: 0;
+    position: relative; }
   #references .reference-author-title {
     margin-bottom: 0;
     position: relative; }
@@ -5967,10 +5982,12 @@ body {
     letter-spacing: -0.1rem;
     font-family: "worksans-regular", sans-serif;
     text-decoration: underline;
+    outline: none;
     clear: both;
     display: block;
     margin-top: 4rem; }
     #references .references-linkedin-link:hover, #references .references-linkedin-link:focus, #references .references-linkedin-link:active {
+      outline: none;
       color: #8c8c8c;
       text-decoration: underline; }
 
@@ -6007,6 +6024,9 @@ body {
       text-align: center; }
       #about .article-content-wrapper p span {
         color: rgba(0, 0, 0, 0.3); }
+  #about .about-interest-content {
+    padding-right: 9%;
+    padding-left: 0; }
   #about .about-interest {
     display: flex;
     margin-bottom: 5rem;
@@ -6014,7 +6034,9 @@ body {
     #about .about-interest:nth-child(even) .about-interest-image {
       order: 2; }
     #about .about-interest:nth-child(even) .about-interest-content {
-      text-align: right; }
+      text-align: right;
+      padding-left: 9%;
+      padding-right: 0; }
   #about .about-interest-image {
     margin: 0 3rem;
     min-width: 21%;
@@ -6029,22 +6051,25 @@ body {
     font-size: 1.6rem;
     letter-spacing: -0.1rem;
     font-family: "worksans-regular", sans-serif;
-    text-decoration: underline; }
+    text-decoration: underline;
+    outline: none; }
     #about .interest-button:hover, #about .interest-button:focus, #about .interest-button:active {
+      outline: none;
       color: #8c8c8c;
       text-decoration: underline; }
   #about .about-intro {
-    font-size: 1.6rem;
     margin-bottom: 4rem;
     text-align: center;
     width: 100%; }
   #about .about-interest-title {
+    font-family: "worksans-thin", sans-serif;
     font-size: 2.4rem;
-    font-family: "worksans-thin", sans-serif; }
+    line-height: 1.2; }
   #about .about-interest-title-main {
     font-family: "worksans-regular", sans-serif;
     font-size: 2.7rem;
     letter-spacing: -0.2rem;
+    line-height: 1.2;
     margin-bottom: 0.5rem;
     width: 100%;
     text-align: center; }
@@ -6081,10 +6106,35 @@ body {
       #contact .article-content-wrapper p span {
         color: rgba(0, 0, 0, 0.3); }
   #contact .contact-title {
-    font-family: "worksans-thin", sans-serif;
-    font-size: 3.6rem;
+    font-family: "worksans-regular", sans-serif;
+    font-size: 2.7rem;
+    letter-spacing: -0.2rem;
+    line-height: 1.2;
     margin: 2rem 0; }
+  #contact .contact-content {
+    font-family: "worksans-thin", sans-serif;
+    font-size: 2.4rem;
+    line-height: 1.2; }
   #contact .contact-methods {
+    display: flex;
+    justify-content: center; }
+  #contact .contact-method {
+    border-radius: 50%;
+    width: 22rem;
+    height: 22rem;
+    margin: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px dotted #8c8c8c; }
+  #contact .contact-method-img {
+    width: 15%;
+    height: 15%;
+    margin-top: -5%;
+    margin-bottom: 10px;
+    display: block; }
+  #contact .contact-method-link {
     border: 0;
     padding: 3px 8px;
     background: transparent;
@@ -6093,20 +6143,11 @@ body {
     letter-spacing: -0.1rem;
     font-family: "worksans-regular", sans-serif;
     text-decoration: underline;
-    display: flex;
-    justify-content: center; }
-    #contact .contact-methods:hover, #contact .contact-methods:focus, #contact .contact-methods:active {
+    outline: none; }
+    #contact .contact-method-link:hover, #contact .contact-method-link:focus, #contact .contact-method-link:active {
+      outline: none;
       color: #8c8c8c;
       text-decoration: underline; }
-  #contact .contact-method {
-    border-radius: 50%;
-    width: 22rem;
-    height: 22rem;
-    margin: 2rem 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px dotted #8c8c8c; }
 
 #outro .section-header-img-wrapper {
   max-width: 400px;
@@ -6124,20 +6165,8 @@ body {
 
 #outro .section-header-sub-title {
   font-family: "worksans-thin", sans-serif;
-  font-size: 4.5rem;
+  font-size: 2.4rem;
   line-height: 1.2;
   margin-bottom: 1.8rem; }
-
-#outro .intro-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -1;
-  transform: translateY(-50%) translateX(-50%);
-  background-size: cover; }
 
 /*# sourceMappingURL=maps/main.css.map */
