--- a/src/scss/sections/_experience.scss
+++ b/src/scss/sections/_experience.scss
@@ -4,7 +4,6 @@
 #experience {
   @extend %article-wrapper;
   flex-direction: column;
-  font-size: 1.6rem;
   padding-bottom: 8vh;
   padding-top: 12vh;
 
@@ -62,10 +61,10 @@
     height: 80px;
     border-radius: 50%;
     border: 1px dotted #8c8c8c;
-    text-align: center;
-    padding-top: 2.2rem;
-    font-size: 2.4rem;
-    font-family: $font-family-work-sans-thin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include text-thin-title();
   }
 
   & .experience-timeline-year {
@@ -79,52 +78,23 @@
     bottom: -80px;
   }
 
-  & .experience-employer-logo-rocket {
-    width: 30%;
-    max-width: 250px;
-  }
-
-  & .experience-employer-logo-tl {
-    width: 30%;
-    max-width: 282px;
-  }
-
-  & .experience-employer-logo-uni {
-    width: 30%;
-    max-width: 250px;
-  }
-
-  & .experience-employer-logo-img {
-    width: 100%;
-    margin-bottom: 0.8rem;
-  }
-
   & .experience-content {
     padding-top: 80px;
     padding-bottom: 20px;
   }
 
   & .experience-employer-name {
-    font-size: 2.2rem;
+    @include text-thin-title();
     margin-bottom: 0.5rem;
-    font-family: $font-family-work-sans-thin;
   }
 
   & .experience-position {
-    font-family: $font-family-work-sans-regular;
-    font-size: 2.7rem;
-    letter-spacing: -0.2rem;
+    @include text-regular-title();
     margin-bottom: 0.5rem;
   }
 
-  & .experience-period {
-    font-family: $font-family-work-sans-thin;
-    font-size: 2.2rem;
-  }
-
   & .experience-subtitle {
-    font-family: $font-family-work-sans-light;
-    font-size: 1.6rem;
+    @include text-base();
     margin-bottom: 0.5rem;
     margin-top: 2.5rem;
   }
