--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -62,7 +62,7 @@
   }
 
   .portfolio-item-title-wrapper {
-    //display: none;
+    display: none;
     text-align: center;
     position: absolute;
     max-width: 241px;
@@ -75,7 +75,7 @@
   }
 
   .portfolio-item-title-wrapper-horizontal {
-    //display: none;
+    display: none;
     text-align: center;
     position: absolute;
     max-width: 320px;
@@ -146,7 +146,7 @@
   }
 
   .project-type-label {
-    @include text-thin-title();
+    @include text-thin-title-small();
     position: absolute;
     top: -3.1rem;
     left: 4.2%;
