--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -58,7 +58,7 @@
   }
 
   &.cogwheel-rotating .cogwheel {
-    animation: rotating 60s linear infinite;
+    animation: rotating 90s linear infinite;
   }
 
   & .skills-list {
@@ -76,27 +76,32 @@
   }
 
   & .skills-list-title {
-    margin: 0;
-    font-size: 3rem;
-    letter-spacing: -0.2rem;
+    @include text-regular-title();
+    margin-top: 0;
     margin-bottom: 0.8rem;
-    font-family: $font-family-work-sans-regular;
   }
 
+  & .skills-list-title-small {
+    @include text-regular-title-small();
+    margin-top: 0;
+    margin-bottom: 0.8rem;
+  }
 
   %skills-group {
     position: absolute;
     top: 50%;
     left: 45%;
     text-align: center;
-    font-size: 1.6rem;
-    line-height: 1.3;
   }
 
   & .skills-group-javascript {
     @extend %skills-group;
     height: 404px;
     width: 404px;
+
+    & .cogwheel {
+      animation-duration: 30s;
+    }
 
     & .skills-list {
       top: -50%;
@@ -107,6 +112,10 @@
   %skills-group-medium {
     height: 304px;
     width: 304px;
+
+    & .cogwheel {
+      animation-duration: 60s;
+    }
   }
 
   & .skills-group-css {
@@ -134,11 +143,6 @@
     @extend %skills-group;
     height: 204px;
     width: 204px;
-
-    & .skills-list-title {
-      font-size: 2.4rem;
-      margin-bottom: 0.6rem;
-    }
   }
 
   & .skills-group-tools {
