--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -137,6 +137,13 @@
   line-height: 1.2;
 }
 
+@mixin text-light-title-small {
+  font-family: $font-family-work-sans-light;
+  font-size: 2rem;
+  letter-spacing: -0.08rem;
+  line-height: 1.2;
+}
+
 @mixin text-regular-title {
   font-family: $font-family-work-sans-regular;
   font-size: 2.7rem;
@@ -434,8 +441,12 @@ h3, .h3 {
   top: 0;
   right: 0;
   bottom: 0;
-  width: 11px;
+  width: 16px;
   display: block !important;
+}
+.scroll-teaser-enabled .tse-scrollbar {
+  background: rgba(255,255,255,0.25);
+  border-radius: 7px;
 }
 .tse-scrollbar .drag-handle {
   cursor: pointer;
@@ -467,6 +478,10 @@ h3, .h3 {
 }
 .tse-scrollbar .drag-handle.visible {
   opacity: 0.65;
+}
+.scroll-teaser-enabled .tse-scrollbar .drag-handle.visible {
+  background: #fff;
+  opacity: 1;
 }
 /* Used when testing the scrollbar width */
 /* No longer using ::scrollbar too, since it breaks Chrome 25 */
