--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -56,17 +56,20 @@
   & .about-interest-content {
     padding-right: 9%;
     padding-left: 0;
+    display: flex;
+    align-items: center;
   }
 
   & .about-interest {
     display: flex;
     margin-bottom: 5rem;
     align-items: center;
+    justify-content: center;
 
     &:nth-child(even) {
-
-      & .about-interest-image {
+      & .about-interest-title {
         order: 2;
+        margin: 0 0 0 3rem;
       }
 
       & .about-interest-content {
@@ -74,6 +77,21 @@
         padding-left: 9%;
         padding-right: 0;
       }
+    }
+
+    & .about-interest-title {
+      @include text-thin-title();
+      width: 200px;
+      height: 200px;
+      margin: 0 3rem 0 0;
+      padding: 3rem;
+      border-radius: 50%;
+      border: 1px dotted #8c8c8c;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      flex: 1 0 auto;
     }
   }
 
@@ -95,15 +113,15 @@
     margin-bottom: 4rem;
     text-align: center;
     width: 100%;
-  }
 
-  & .about-interest-title {
-    @include text-thin-title();
+    & .about-interest-title {
+      @include text-thin-title();
+    }
   }
 
   & .about-interest-title-main {
     @include text-regular-title();
-    margin-bottom: 0.5rem;
+    margin-bottom: 3rem;
     width: 100%;
     text-align: center;
   }
