--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -25,6 +25,7 @@
   font-family: $font-family-work-sans-regular;
   text-decoration: underline;
   outline: none;
+  color: #000;
 
   &:hover,
   &:focus,
@@ -108,6 +109,7 @@
   font-size: 1.6rem;
   letter-spacing: -0.02rem;
   line-height: 1.4;
+  color: #000;
 }
 
 @mixin text-display-title {
@@ -115,12 +117,14 @@
   font-size: 4.4rem;
   letter-spacing: -0.02rem;
   line-height: 1.2;
+  color: #000;
 }
 
 @mixin text-thin-title {
   font-family: $font-family-work-sans-thin;
   font-size: 2.4rem;
   line-height: 1.2;
+  color: #000;
 }
 
 @mixin text-thin-title-small {
@@ -128,6 +132,7 @@
   font-size: 1.7rem;
   line-height: 1.2;
   letter-spacing: 0.03rem;
+  color: #000;
 }
 
 @mixin text-light-title {
@@ -135,6 +140,7 @@
   font-size: 2.4rem;
   letter-spacing: -0.08rem;
   line-height: 1.2;
+  color: #000;
 }
 
 @mixin text-light-title-small {
@@ -142,6 +148,7 @@
   font-size: 2rem;
   letter-spacing: -0.08rem;
   line-height: 1.2;
+  color: #000;
 }
 
 @mixin text-regular-title {
@@ -149,6 +156,7 @@
   font-size: 2.7rem;
   letter-spacing: -0.2rem;
   line-height: 1.2;
+  color: #000;
 }
 
 @mixin text-regular-title-small {
@@ -156,6 +164,7 @@
   font-size: 2.2rem;
   letter-spacing: -0.12rem;
   line-height: 1.1;
+  color: #000;
 }
 
 
@@ -173,6 +182,7 @@ body  {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  color: #333;
 }
 
 h1, .h1 {
