Added on demand loading of modals

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5821,8 +5821,8 @@ body {
     font-size: 7rem;
     font-family: "worksans-thin", sans-serif;
     position: fixed;
-    top: -30px;
-    right: -30px;
+    top: 0;
+    right: 0;
     z-index: 1;
     background: transparent;
     border: none;
@@ -6210,8 +6210,8 @@ body {
     font-size: 7rem;
     font-family: "worksans-thin", sans-serif;
     position: fixed;
-    top: -30px;
-    right: -30px;
+    top: 0;
+    right: 0;
     z-index: 1;
     background: transparent;
     border: none;
