--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -205,8 +205,8 @@
       font-size: 7rem;
       font-family: $font-family-work-sans-thin;
       position: fixed;
-      top: -30px;
-      right: -30px;
+      top: 0;
+      right: 0;
       z-index: 1;
       background: transparent;
       border: none;
